tests/baselines/reference/extendNonClassSymbol2.errors.txt
tests/cases/compiler/extendNonClassSymbol2.ts(5,17): error TS2507: Type '() => void' is not a constructor function type.


==== tests/cases/compiler/extendNonClassSymbol2.ts (1 errors) ====
    function Foo() {
       this.x = 1;
    }
    var x = new Foo(); // legal, considered a constructor function
    class C extends Foo {} // error, could not find symbol Foo
                    ~~~
!!! error TS2507: Type '() => void' is not a constructor function type.